Add account page

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 	h1 Steam Salvage
-	input#search(type="search", placeholder="Put your Steamid here")
+	input#search(type="search", placeholder="Insert a Steamid here")
 	ul#results
 	include template.html
 
