--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,6 +1,7 @@
 html
 	head
 		title=title
+		// Core of bootstrap
 		link(
 			href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css',
 			rel='stylesheet'
