--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,11 @@ doctype html
 html
   head
     title= title
+    // Custom CSS
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
   body
-    block content
+    div.container
+      div.jumbotron.text-center
+        a.btn.btn-primary(href='/account') Go to account page
+        block content
