Start working on this again

--- a/views/account.pug
+++ b/views/account.pug
@@ -6,6 +6,7 @@ html
 	body
 		div.container
 			div.jumbotron.text-center
+				a.btn.btn-success(href='/') Jump back to main page
 				h1 Hello!
 				if user
 					p Welcome, #{user.fullName}
