--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,24 @@ extends layout
 
 block content
 	h1 Steam Salvage
-	input#search(type="search", placeholder="Insert a Steamid here")
-	ul#results
-	include template.html
+	input#search(type="search", placeholder="Insert a Steamid64 here and click enter")
+	.display_result
+		ul#results
+		include player_summary.html
+	.accordion
+		#tab-1
+			a.tab(href='#tab-1') Option One
+			.content
+			| Content Here
+		#tab-2
+			a.tab(href='#tab-2') Option Two
+			.content
+			| Content Here
+		#tab-3
+			a.tab(href='#tab-3') Option Three
+			.content
+			| Content Here
+
 
 	script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js")
