--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; 
 	text-align: center;
 	background-color: #293f50;
@@ -9,131 +8,161 @@ a {
   color: #00B7FF;
 }
 
+/* Search bar on index page */
 #search {
 	text-align: center;
 	width:800px;
 	height: 70px;
-	font-size:3.5em;
+	font-size:2.5em;
 	border-radius:8px;
+} 
+
+#display_result {
+    padding: 50px;
 }
 
-/*-------------------------------------*/
-
-.cf:before, .cf:after {
-    content: "";
-    display: table;
+/* ------------------Accordion CSS---------------------- */
+/* remove all the margins, paddings and borders. */
+.accordion,.accordion div,.accordion h1,.accordion p,.accordion a,.accordion img,.accordion span,.accordion em,.accordion ul,.accordion li {
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
-.cf:after {
-    clear: both;
+/* background color, rounded corners and some shadows */
+.accordion {
+    width: 500px;
+    padding: 1px 5px 5px 5px;
+    background: #141517;
+ 
+    -webkit-box-shadow: 0px 1px 0px rgba(255,255,255, .05);
+    -moz-box-shadow: 0px 1px 0px rgba(255,255,255, .05);
+    box-shadow: 0px 1px 0px rgba(255,255,255, .05);
+ 
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 
-.cf {
-    zoom: 1;
+/* styling the default tab header with some CSS3 gradients, shadows, rounded corners and some basic CSS properties */
+.accordion .tab {
+    display: block;
+    height: 35px;
+    margin-top: 4px;
+    padding-left: 20px;
+    font: bold 12px/35px Arial, sans-serif;
+    text-decoration: none;
+    color: #eee;
+ 
+    text-shadow: 1px 1px 0px rgba(0,0,0, .2);
+ 
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+ 
+    background: #6c6e74;
+    background: -moz-linear-gradient(top,  #6c6e74 0%, #4b4d51 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6c6e74), color-stop(100%,#4b4d51));
+    background: -webkit-linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
+    background: -o-linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
+    background: -ms-linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
+    background: linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
+ 
+    -webkit-box-shadow: 0px 1px 0px rgba(0,0,0, .1), inset 0px 1px 0px rgba(255,255,255, .1);
+    -moz-box-shadow: 0px 1px 0px rgba(0,0,0, .1), inset 0px 1px 0px rgba(255,255,255, .1);
+    box-shadow: 0px 1px 0px rgba(0,0,0, .1), inset 0px 1px 0px rgba(255,255,255, .1);
 }
 
-
-/*-------------------------------------*/
-
-.form-wrapper {
-    width: 600px;
-    padding: 15px;
-    margin: 150px auto 50px auto;
-    background: #444;
-    background: rgba(0, 0, 0, .2);
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .4) inset, 0 1px 0 rgba(255, 255, 255, .2);
-    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .4) inset, 0 1px 0 rgba(255, 255, 255, .2);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, .4) inset, 0 1px 0 rgba(255, 255, 255, .2);
+/* hover and active style. Change the text and the gradient color to a green one */
+.accordion .tab:hover,
+.accordion div:target .tab {
+    color: #2b3b06;
+ 
+    text-shadow: 0px 1px 0px rgba(255,255,255, .15);
+ 
+    background: #a5cd4e;
+    background: -moz-linear-gradient(top,  #a5cd4e 0%, #6b8f1a 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a5cd4e), color-stop(100%,#6b8f1a));
+    background: -webkit-linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
+    background: -o-linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
+    background: -ms-linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
+    background: linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
+ 
+    -webkit-box-shadow: 1px 1px 1px rgba(0,0,0, .3), inset 1px 1px 1px rgba(255,255,255, .45);
+    -moz-box-shadow: 1px 1px 1px rgba(0,0,0, .3), inset 1px 1px 1px rgba(255,255,255, .45);
+    box-shadow: 1px 1px 1px rgba(0,0,0, .3), inset 1px 1px 1px rgba(255,255,255, .45);
 }
 
-.form-wrapper input {
-    width: 480px;
+/* hide all the content and only show it when you click on a tab */
+.accordion div .content {
+    display: none;
+    margin: 5px 0;
+}
+ 
+.accordion div:target .content {
+    display: block;
+}
+ 
+.accordion > div {
     height: 40px;
-    padding: 10px 5px;
+    overflow: hidden;
+ 
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+ 
+.accordion > div:target {
+    height: 100px;
+}
+
+/* CSS the contents displayed */
+.accordion .content h1 {
+    color: white;
+    font: 18px/32px Arial, sans-serif;
+}
+ 
+.accordion .content p {
+    margin: 10px 0;
+    color: white;
+    font: 11px/16px Arial, sans-serif;
+}
+ 
+.accordion .content span {
+    font: italic 11px/12px Georgia, Arial, sans-serif;
+    color: #4f4f4f;
+}
+ 
+.accordion .content em.bullet {
+    width: 5px;
+    height: 5px;
+    margin: 0 5px;
+    background: #6b8f1a;
+    display: inline-block;
+ 
+    -webkit-box-shadow: inset 1px 1px 1px rgba(255,255,255, 0.4);
+    -moz-box-shadow: inset 1px 1px 1px rgba(255,255,255, 0.4);
+    box-shadow: inset 1px 1px 1px rgba(255,255,255, 0.4);
+ 
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.accordion .content ul li {
+    list-style: none;
     float: left;
-    font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
-    border: 0;
-    background: #eee;
-    -moz-border-radius: 3px 0 0 3px;
-    -webkit-border-radius: 3px 0 0 3px;
-    border-radius: 3px 0 0 3px;
+    margin: 5px 10px 5px 0;
 }
+ 
+.accordion .content img {
+    -webkit-box-shadow: 2px 2px 6px rgba(0,0,0, .5);
+    -moz-box-shadow: 2px 2px 6px rgba(0,0,0, .5);
+    box-shadow: 2px 2px 6px rgba(0,0,0, .5);
+} 
 
-.form-wrapper input:focus {
-    outline: 0;
-    background: #fff;
-    -moz-box-shadow: 0 0 2px rgba(0, 0, 0, .8) inset;
-    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, .8) inset;
-    box-shadow: 0 0 2px rgba(0, 0, 0, .8) inset;
-}
-
-.form-wrapper input::-webkit-input-placeholder {
-    color: #999;
-    font-weight: normal;
-    font-style: italic;
-}
-
-.form-wrapper input:-moz-placeholder {
-    color: #999;
-    font-weight: normal;
-    font-style: italic;
-}
-
-.form-wrapper input:-ms-input-placeholder {
-    color: #999;
-    font-weight: normal;
-    font-style: italic;
-}
-
-.form-wrapper button {
-    overflow: visible;
-    position: relative;
-    float: right;
-    border: 0;
-    padding: 0;
-    cursor: pointer;
-    height: 40px;
-    width: 90px;
-    font: bold 15px/40px 'lucida sans', 'trebuchet MS', 'Tahoma';
-    color: #fff;
-    text-transform: uppercase;
-    background: #d83c3c;
-    -moz-border-radius: 0 3px 3px 0;
-    -webkit-border-radius: 0 3px 3px 0;
-    border-radius: 0 3px 3px 0;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
-}
-
-.form-wrapper button:hover {
-    background: #e54040;
-}
-
-.form-wrapper button:active, .form-wrapper button:focus {
-    background: #c42f2f;
-}
-
-.form-wrapper button:before {
-    content: '';
-    position: absolute;
-    border-width: 8px 8px 8px 0;
-    border-style: solid solid solid none;
-    border-color: transparent #d83c3c transparent;
-    top: 12px;
-    left: -6px;
-}
-
-.form-wrapper button:hover:before {
-    border-right-color: #e54040;
-}
-
-.form-wrapper button:focus:before {
-    border-right-color: #c42f2f;
-}
-
-.form-wrapper button::-moz-focus-inner {
-    border: 0;
-    padding: 0;
+.accordion > div:target {
+    height: 360px;
 }
