--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,151 +1,163 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; 
-	text-align: center;
-	background-color: #293f50;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    text-align: center;
+    background-color: #293f50;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
 
+
 /* Search bar on index page */
+
 #search {
-	text-align: center;
-	width:800px;
-	height: 70px;
-	font-size:2.5em;
-	border-radius:8px;
-} 
+    text-align: center;
+    width: 800px;
+    height: 70px;
+    font-size: 2.5em;
+    border-radius: 8px;
+}
 
 #display_result {
     padding: 50px;
 }
 
-/* ------------------Accordion CSS---------------------- */
+
+/* ------------------                          Accordion CSS                                    ---------------------- */
+
+
 /* remove all the margins, paddings and borders. */
-.accordion,.accordion div,.accordion h1,.accordion p,.accordion a,.accordion img,.accordion span,.accordion em,.accordion ul,.accordion li {
-    margin: 0;
+
+.accordion,
+.accordion div,
+.accordion h1,
+.accordion p,
+.accordion a,
+.accordion img,
+.accordion span,
+.accordion em,
+.accordion ul,
+.accordion li {
+    margin: 0 auto;
     padding: 0;
     border: none;
 }
 
+
 /* background color, rounded corners and some shadows */
+
 .accordion {
-    width: 500px;
+    width: 700px;
     padding: 1px 5px 5px 5px;
     background: #141517;
- 
-    -webkit-box-shadow: 0px 1px 0px rgba(255,255,255, .05);
-    -moz-box-shadow: 0px 1px 0px rgba(255,255,255, .05);
-    box-shadow: 0px 1px 0px rgba(255,255,255, .05);
- 
+    -webkit-box-shadow: 0px 1px 0px rgba(255, 255, 255, .05);
+    -moz-box-shadow: 0px 1px 0px rgba(255, 255, 255, .05);
+    box-shadow: 0px 1px 0px rgba(255, 255, 255, .05);
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
 }
 
+
 /* styling the default tab header with some CSS3 gradients, shadows, rounded corners and some basic CSS properties */
+
 .accordion .tab {
     display: block;
     height: 35px;
     margin-top: 4px;
-    padding-left: 20px;
     font: bold 12px/35px Arial, sans-serif;
     text-decoration: none;
     color: #eee;
- 
-    text-shadow: 1px 1px 0px rgba(0,0,0, .2);
- 
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, .2);
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
- 
     background: #6c6e74;
-    background: -moz-linear-gradient(top,  #6c6e74 0%, #4b4d51 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6c6e74), color-stop(100%,#4b4d51));
-    background: -webkit-linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
-    background: -o-linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
-    background: -ms-linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
-    background: linear-gradient(top,  #6c6e74 0%,#4b4d51 100%);
- 
-    -webkit-box-shadow: 0px 1px 0px rgba(0,0,0, .1), inset 0px 1px 0px rgba(255,255,255, .1);
-    -moz-box-shadow: 0px 1px 0px rgba(0,0,0, .1), inset 0px 1px 0px rgba(255,255,255, .1);
-    box-shadow: 0px 1px 0px rgba(0,0,0, .1), inset 0px 1px 0px rgba(255,255,255, .1);
+    background: -moz-linear-gradient(top, #6c6e74 0%, #4b4d51 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6c6e74), color-stop(100%, #4b4d51));
+    background: -webkit-linear-gradient(top, #6c6e74 0%, #4b4d51 100%);
+    background: -o-linear-gradient(top, #6c6e74 0%, #4b4d51 100%);
+    background: -ms-linear-gradient(top, #6c6e74 0%, #4b4d51 100%);
+    background: linear-gradient(top, #6c6e74 0%, #4b4d51 100%);
+    -webkit-box-shadow: 0px 1px 0px rgba(0, 0, 0, .1), inset 0px 1px 0px rgba(255, 255, 255, .1);
+    -moz-box-shadow: 0px 1px 0px rgba(0, 0, 0, .1), inset 0px 1px 0px rgba(255, 255, 255, .1);
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, .1), inset 0px 1px 0px rgba(255, 255, 255, .1);
 }
 
+
 /* hover and active style. Change the text and the gradient color to a green one */
+
 .accordion .tab:hover,
 .accordion div:target .tab {
     color: #2b3b06;
- 
-    text-shadow: 0px 1px 0px rgba(255,255,255, .15);
- 
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, .15);
     background: #a5cd4e;
-    background: -moz-linear-gradient(top,  #a5cd4e 0%, #6b8f1a 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a5cd4e), color-stop(100%,#6b8f1a));
-    background: -webkit-linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
-    background: -o-linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
-    background: -ms-linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
-    background: linear-gradient(top,  #a5cd4e 0%,#6b8f1a 100%);
- 
-    -webkit-box-shadow: 1px 1px 1px rgba(0,0,0, .3), inset 1px 1px 1px rgba(255,255,255, .45);
-    -moz-box-shadow: 1px 1px 1px rgba(0,0,0, .3), inset 1px 1px 1px rgba(255,255,255, .45);
-    box-shadow: 1px 1px 1px rgba(0,0,0, .3), inset 1px 1px 1px rgba(255,255,255, .45);
+    background: -moz-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #a5cd4e), color-stop(100%, #6b8f1a));
+    background: -webkit-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+    background: -o-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+    background: -ms-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+    background: linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+    -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, .3), inset 1px 1px 1px rgba(255, 255, 255, .45);
+    -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, .3), inset 1px 1px 1px rgba(255, 255, 255, .45);
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .3), inset 1px 1px 1px rgba(255, 255, 255, .45);
 }
 
+
 /* hide all the content and only show it when you click on a tab */
+
 .accordion div .content {
     display: none;
     margin: 5px 0;
 }
- 
+
 .accordion div:target .content {
     display: block;
 }
- 
-.accordion > div {
+
+.accordion>div {
     height: 40px;
     overflow: hidden;
- 
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     -o-transition: all .3s ease-in-out;
     -ms-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
 }
- 
-.accordion > div:target {
-    height: 100px;
+
+.accordion>div:target {
+    height: 200px;
 }
 
+
 /* CSS the contents displayed */
+
 .accordion .content h1 {
     color: white;
     font: 18px/32px Arial, sans-serif;
 }
- 
+
 .accordion .content p {
     margin: 10px 0;
     color: white;
     font: 11px/16px Arial, sans-serif;
 }
- 
+
 .accordion .content span {
     font: italic 11px/12px Georgia, Arial, sans-serif;
     color: #4f4f4f;
 }
- 
+
 .accordion .content em.bullet {
     width: 5px;
     height: 5px;
     margin: 0 5px;
     background: #6b8f1a;
     display: inline-block;
- 
-    -webkit-box-shadow: inset 1px 1px 1px rgba(255,255,255, 0.4);
-    -moz-box-shadow: inset 1px 1px 1px rgba(255,255,255, 0.4);
-    box-shadow: inset 1px 1px 1px rgba(255,255,255, 0.4);
- 
+    -webkit-box-shadow: inset 1px 1px 1px rgba(255, 255, 255, 0.4);
+    -moz-box-shadow: inset 1px 1px 1px rgba(255, 255, 255, 0.4);
+    box-shadow: inset 1px 1px 1px rgba(255, 255, 255, 0.4);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -156,13 +168,37 @@ a {
     float: left;
     margin: 5px 10px 5px 0;
 }
- 
-.accordion .content img {
-    -webkit-box-shadow: 2px 2px 6px rgba(0,0,0, .5);
-    -moz-box-shadow: 2px 2px 6px rgba(0,0,0, .5);
-    box-shadow: 2px 2px 6px rgba(0,0,0, .5);
-} 
 
-.accordion > div:target {
-    height: 360px;
+.accordion .content img {
+    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, .5);
+    -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, .5);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .5);
+}
+
+.accordion>div:target {
+    height: 500px;
+}
+
+
+/* ------------------                          Other custom CSS in Acordion                                   ---------------------- */
+
+#first_item {
+    color: #445c7b;
+    font-family: 'Raleway';
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 36px;
+}
+
+#first_item2 {
+    color: #f2f2f2; background: #ff4a4a; font-size: 36px; line-height: 65px; font-weight: 700; margin: 0 1px 2px; padding: 5px; font-family: 'Libre Baskerville', serif;
+}
+
+#first_item3 {
+    color: #f2f2f2; background: #6495ed; font-size: 36px; line-height: 65px; font-weight: 700; margin: 0 1px 2px; padding: 5px; font-family: 'Libre Baskerville', serif;
+}
+
+#image_border {
+  border: 15px solid #3e2b14;
+  padding: 10px;
 }
