--- a/views/export_result.html
+++ b/views/export_result.html
@@ -1,19 +1,26 @@
 <script id="search-results" type="text/x-handlebars-template">
 	<div class="accordion">
-		<div id="tab-1"><a href="#tab-1" class="tab">Player Brief Info</a>
+		<div id="tab-1"><a href="#tab-1" class="tab">Player Summary Info</a>
 			<div class="content">
 				<br>
 				{{#each resultsArray}}
 					Click this picture to go into the Steam profile--------><a id="ava" href='{{profileurl}}' target="_blank"><img id="image_border" src='{{avatarfull}}' /></a>
 					<p id="first_item">Persona Name: <strong id="first_item2">{{personaname}}</strong></p>
 					<p id="first_item">Real Name: <strong id="first_item3">{{realname}}</strong></p>
+					<p id="first_item">Country: <strong id="first_item4">{{loccountrycode}}</strong></p>
+					<p id="first_item">State: <strong id="first_item5">{{locstatecode}}</strong></p>
 				{{/each}}
 				<br>
 			</div>
 		</div>
-		<div id="tab-2"><a href="#tab-2" class="tab">Option Two</a>
+		<div id="tab-2"><a href="#tab-2" class="tab">Game Summary Info</a>
 			<div class="content">
-				Content here
+				<br>				
+				{{#each resultsArray}}
+					<p id="first_item">Games and DLC: <strong id="first_item2">{{game_count}}</strong></p>
+					<p id="first_item">Game: <strong id="first_item3">{{appid}}</strong></p>
+				{{/each}}
+				<br>
 			</div>
 		</div>
 		<div id="tab-3"><a href="#tab-3" class="tab">Option Three</a>
@@ -22,7 +29,6 @@
 			</div>
 		</div>
 	</div>
-
 	<br>
 	</ul>
 </script>
