--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
 	input#search(type="search", placeholder="Insert a Steamid64 here and click enter")
 	.display_result
 		ul#results
-		include player_summary.html
+		include export_result.html
 
 	script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js")
