--- a/views/export_gs.html
+++ b/views/export_gs.html
@@ -1,6 +1,5 @@
 <script id="export_gs" type="text/x-handlebars-template">
-	
 	{{#each resultsArray}}
-        <p id="first_item">Game_id: <strong id="first_item2">{{appid}}</strong></p>
+        <p id="first_item">Total Games and DLC: <strong id="first_item2">{{game_count}}</strong></p>
 	{{/each}}				
 </script>
